{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 140,
  "lineage": "2eea3a9c-2852-df94-0fce-8d31ae5c860c",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork/subnets/subnet-tf-test",
            "name": "subnet-tf-test",
            "resource_group_name": "testing_terraform",
            "virtual_network_name": "tf_VNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnetwork_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "853edfac-4252-4257-a9f6-6a2d32c382a9",
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork",
            "location": "westeurope",
            "name": "tf_VNetwork",
            "resource_group_name": "testing_terraform",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork/subnets/subnet-tf-test",
                "name": "subnet-tf-test",
                "security_group": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup_tf"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.testing_tf"
          ]
        }
      ]
    },
    {
      "module": "module.networkCon",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/networkInterfaces/network_inteface_tf",
            "internal_domain_name_suffix": "vtpt3bksijlufkpwniwtfq2cvb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/publicIPAddresses/PublicIp_tf",
                "subnet_id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork/subnets/subnet-tf-test"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-F4-24-FE",
            "name": "network_inteface_tf",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "testing_terraform",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Compute/virtualMachines/Vmachine-tf"
          },
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_subnet.subnet_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf",
            "module.networkCon.azurerm_public_ip.public_ip_tf"
          ]
        }
      ]
    },
    {
      "module": "module.networkCon",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/publicIPAddresses/PublicIp_tf",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.137.52.246",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIp_tf",
            "resource_group_name": "testing_terraform",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_subnet.subnet_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf"
          ]
        }
      ]
    },
    {
      "module": "module.networkSec",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup_tf",
            "location": "westeurope",
            "name": "SecurityGroup_tf",
            "resource_group_name": "testing_terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "tf_dev_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_subnet.subnet_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf",
            "module.networkCon.azurerm_network_interface.nic_tf",
            "module.networkCon.azurerm_public_ip.public_ip_tf"
          ]
        }
      ]
    },
    {
      "module": "module.networkSec",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup_tf/securityRules/tf_dev_rule",
            "name": "tf_dev_rule",
            "network_security_group_name": "SecurityGroup_tf",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "testing_terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_subnet.subnet_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf",
            "module.networkCon.azurerm_network_interface.nic_tf",
            "module.networkCon.azurerm_public_ip.public_ip_tf",
            "module.networkSec.azurerm_network_security_group.nsg_tf"
          ]
        }
      ]
    },
    {
      "module": "module.networkSec",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ngs_association_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork/subnets/subnet-tf-test",
            "network_security_group_id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup_tf",
            "subnet_id": "/subscriptions/38a8bd4d-ba09-4e21-8dc2-6bfb7f099a30/resourceGroups/testing_terraform/providers/Microsoft.Network/virtualNetworks/tf_VNetwork/subnets/subnet-tf-test"
          },
          "dependencies": [
            "azurerm_resource_group.testing_tf",
            "module.network.azurerm_subnet.subnet_tf",
            "module.network.azurerm_virtual_network.Vnetwork_tf",
            "module.networkCon.azurerm_network_interface.nic_tf",
            "module.networkCon.azurerm_public_ip.public_ip_tf",
            "module.networkSec.azurerm_network_security_group.nsg_tf"
          ]
        }
      ]
    }
  ]
}